# dexsta

./: .gitignore  Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
idls/: admin_xft.json  minter.json  operator.json  vault.json
notes/: solana-anchor-cpi-global-allocator-error.md  solana-anchor-multiprogram-build-deploy.md  solana-anchor-pda-string-seed.md
programs/amm-admin/: Cargo.toml  amm-admin-keypair.json
programs/amm-admin/src/: lib.rs
programs/amm-pool/: Cargo.toml  amm-pool-keypair.json
programs/amm-pool/src/: lib.rs
programs/token-admin/: Cargo.toml  token-admin-keypair.json
programs/token-admin/src/: lib.rs
programs/token-pool/: Cargo.toml  token-pool-keypair.json
programs/token-pool/src/: lib.rs
programs/xft-admin/: Cargo.toml
programs/xft-admin/src/: lib.rs
programs/xft-market/: Cargo.toml  xft_market-keypair.json
programs/xft-market/src/: lib.rs
programs/xft-minter/: Cargo.toml
programs/xft-minter/src/: lib.rs
programs/xft-operator/: Cargo.toml  operator-keypair.json
programs/xft-operator/src/: lib.rs
programs/xft-vault/: Cargo.toml  vault-keypair.json
programs/xft-vault/src/: lib.rs
tests/: nft_oneofone_vault.ts  solanatemplate.ts
