[workspace]
members = [
    "programs/xft-admin",
    "programs/xft-minter",
    "programs/xft-vault",
    "programs/xft-operator",
    "programs/xft-market",
    "programs/token-admin",
    "programs/amm-admin",
    "programs/amm-pool",
    "programs/token-pool"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
